@startuml

class Utilisateur {
    ---
    identification: String
    authentification: ???
    droits: ???
}

class Organisation {
    demandeur: Recruteur [FK]
    statut: {acceptée, refusée, en attente}
    ---
    nom
    adresse
}

class Recruteur {
    statut: {accepté, refusé, en attente}
    organisation: Organisation [FK]
    ---
    nom: String
    prenom: String
}

class Candidat {
    ---
    nom: String
    prenom: String
    biographie: String
    qualifications: String
}

class Administrateur {
    statut: {accepté, refusé, en attente}
    ---
}

class OffreEmploi {
    recruteur: Recruteur [FK]
    fiche: FichePoste [FK]
    statut: {expirée, ouverte, ...}
    ---
    tags: ???
}

class Candidature {
    candidat: Candidat [FK]
    offre: Offre [FK]
    statut: {acceptée, refusée, en attente}
    ---
    contenu: ???
}

class FichePoste {
    createur: Recruteur [FK]
    organisation: Organisation [FK]
    ---
    responsable: string
}


Candidat <-- Utilisateur
Recruteur <-- Utilisateur
Administrateur <-- Utilisateur
Recruteur "*" -- "1" Organisation: "Sollicite"

Candidature "*" -- "1" OffreEmploi: "Recoit"
Candidature "*" -- "1" Candidat: "Dépose"

OffreEmploi "*" -- "1" Recruteur: "Emet"
Organisation "*" -- "1" Recruteur: "Soumet"

FichePoste "*" -- "1" Recruteur: "Crée"
FichePoste "*" -- "1" Organisation: "Concerne"
OffreEmploi "*" -- "1" FichePoste: "Utilise"

@enduml